; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/gdb/gdb/extr_gdbarch.c_gdbarch_store_return_value.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/gdb/gdb/extr_gdbarch.c_gdbarch_store_return_value.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.gdbarch = type { i32 (%struct.type*, %struct.regcache*, i8*)* }
%struct.type = type { i32 }
%struct.regcache = type { i32 }

@gdbarch_debug = common dso_local global i32 0, align 4
@gdb_stdlog = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [35 x i8] c"gdbarch_store_return_value called\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @gdbarch_store_return_value(%struct.gdbarch* %0, %struct.type* %1, %struct.regcache* %2, i8* %3) #0 {
  %5 = alloca %struct.gdbarch*, align 8
  %6 = alloca %struct.type*, align 8
  %7 = alloca %struct.regcache*, align 8
  %8 = alloca i8*, align 8
  store %struct.gdbarch* %0, %struct.gdbarch** %5, align 8
  store %struct.type* %1, %struct.type** %6, align 8
  store %struct.regcache* %2, %struct.regcache** %7, align 8
  store i8* %3, i8** %8, align 8
  %9 = load %struct.gdbarch*, %struct.gdbarch** %5, align 8
  %10 = icmp ne %struct.gdbarch* %9, null
  %11 = zext i1 %10 to i32
  %12 = call i32 @gdb_assert(i32 %11)
  %13 = load %struct.gdbarch*, %struct.gdbarch** %5, align 8
  %14 = getelementptr inbounds %struct.gdbarch, %struct.gdbarch* %13, i32 0, i32 0
  %15 = load i32 (%struct.type*, %struct.regcache*, i8*)*, i32 (%struct.type*, %struct.regcache*, i8*)** %14, align 8
  %16 = icmp ne i32 (%struct.type*, %struct.regcache*, i8*)* %15, null
  %17 = zext i1 %16 to i32
  %18 = call i32 @gdb_assert(i32 %17)
  %19 = load i32, i32* @gdbarch_debug, align 4
  %20 = icmp sge i32 %19, 2
  br i1 %20, label %21, label %24

21:                                               ; preds = %4
  %22 = load i32, i32* @gdb_stdlog, align 4
  %23 = call i32 @fprintf_unfiltered(i32 %22, i8* getelementptr inbounds ([35 x i8], [35 x i8]* @.str, i64 0, i64 0))
  br label %24

24:                                               ; preds = %21, %4
  %25 = load %struct.gdbarch*, %struct.gdbarch** %5, align 8
  %26 = getelementptr inbounds %struct.gdbarch, %struct.gdbarch* %25, i32 0, i32 0
  %27 = load i32 (%struct.type*, %struct.regcache*, i8*)*, i32 (%struct.type*, %struct.regcache*, i8*)** %26, align 8
  %28 = load %struct.type*, %struct.type** %6, align 8
  %29 = load %struct.regcache*, %struct.regcache** %7, align 8
  %30 = load i8*, i8** %8, align 8
  %31 = call i32 %27(%struct.type* %28, %struct.regcache* %29, i8* %30)
  ret void
}

declare dso_local i32 @gdb_assert(i32) #1

declare dso_local i32 @fprintf_unfiltered(i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
